Z-index FIX

--- a/nav.css
+++ b/nav.css
@@ -69,7 +69,7 @@ body{
    background: #e7e2e2;
    border-radius: 3px;
    
-   z-index: 3;
+   z-index: 1;
    
    transform-origin: 4px 0px;
    
